--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,18 @@
-- hosts: docker-registry-servers
-  roles:
-  - { role: docker-registry }
+---
+galaxy_info:
+  author: Soumen Trivedi
+  description: Private Docker Registry on Ubuntu 14.04 or above
+  min_ansible_version: 1.7
+  platforms:
+    - name: Ubuntu
+      versions:
+        - trusty
+  categories:
+    - development
+    - packaging
+    - system
+dependencies: []
+  # List your role dependencies here, one per line. Only
+  # dependencies available via galaxy should be listed here.
+  # Be sure to remove the '[]' above if you add dependencies
+  # to this list.
