--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,12 @@
 ---
 galaxy_info:
   author: Soumen Trivedi
-  description: Private Docker Registry on Ubuntu 14.04 or above
+  description: Private Docker Registry on Ubuntu 12.04 or above
   min_ansible_version: 1.7
   platforms:
     - name: Ubuntu
       versions:
+        - precise
         - trusty
   categories:
     - development
